# nats-cns

./: .gitignore  CITATION.cff  README.md  docker-compose.yml  pyproject.toml  requirements.txt
benchmark_results_paper/payload_1024/rep_1/: SUMMARY.md  q1_latency.csv  q2_throughput.csv  q3_validation_serialization.csv  q4_graceful_stop.csv  results.json
benchmark_results_paper/payload_1024/rep_2/: SUMMARY.md  q1_latency.csv  q2_throughput.csv  q3_validation_serialization.csv  q4_graceful_stop.csv  results.json
benchmark_results_paper/payload_1024/rep_3/: SUMMARY.md  q1_latency.csv  q2_throughput.csv  q3_validation_serialization.csv  q4_graceful_stop.csv  results.json
benchmark_results_paper/payload_256/rep_1/: SUMMARY.md  q1_latency.csv  q2_throughput.csv  q3_validation_serialization.csv  q4_graceful_stop.csv  results.json
benchmark_results_paper/payload_256/rep_2/: SUMMARY.md  q1_latency.csv  q2_throughput.csv  q3_validation_serialization.csv  q4_graceful_stop.csv  results.json
benchmark_results_paper/payload_256/rep_3/: SUMMARY.md  q1_latency.csv  q2_throughput.csv  q3_validation_serialization.csv  q4_graceful_stop.csv  results.json
benchmark_results_paper/payload_4096/rep_1/: SUMMARY.md  q1_latency.csv  q2_throughput.csv  q3_validation_serialization.csv  q4_graceful_stop.csv  (+1 more)
benchmark_results_paper/warmup/: SUMMARY.md  q1_latency.csv  q2_throughput.csv  q3_validation_serialization.csv  q4_graceful_stop.csv  results.json
benchmarks/: EXPERIMENT.md  README.md  run_benchmarks.py  run_paper_experiments.sh  taxonomy_diff.py
src/nats_cns/: base.py
(+12 files in other folders)
