[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "nats-cns"
version = "0.1.0"
description = ""
readme = "README.md"
requires-python = ">=3.10"
authors = [
  {name = "Dimitris Gkoulis"}
]
dependencies = [
  "nats-py==2.14.0"
]

[project.optional-dependencies]
dev = [
  "pytest>=7.4"
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = [
  "src"
]
testpaths = [
  "tests"
]

[tool.black]
line-length = 140
